--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -19,6 +19,7 @@
     "react-cool-onclickoutside": "^1.7.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-lottie": "^1.2.4",
     "react-scripts": "5.0.1",
     "react-segmented-control": "^0.2.2",
