--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "dependencies": {
     "express": "^4.19.2",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "prettier": "^3.0.0-alpha.6"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "prettier": "^3.0.0-alpha.6",
+    "tailwindcss": "^3.4.10"
   }
 }
